# weaver

./: .env.example  .gitignore  ARCHITECTURE.md  HARDWARE.md  INTEGRATIONS.md  README.md  SAFETY.md  pyproject.toml
scripts/: seed_phrases.py
static/dashboard/: index.html
tests/: __init__.py  conftest.py  test_config.py  test_cortex.py  test_dance.py  test_event_bus.py  test_intent_parser.py  test_keepalive.py  test_llm_bridges.py  test_phrase_cache.py  test_safety.py  test_sensors.py  test_voice.py
weaver/: __init__.py  config.py  event_bus.py  keepalive.py  main.py  safety.py
weaver/brain/: __init__.py  cortex.py  intent_parser.py  ollama_cloud.py  ollama_local.py  phrase_cache.py
weaver/dance/: __init__.py  beat_detector.py  dance_engine.py  dance_safety.py  macarena.py  move_library.py  student_api.py
weaver/motion/: __init__.py  gait_engine.py  kinematics.py  posture.py  servo_driver.py
weaver/peripherals/: __init__.py  display.py  leds.py  telemetry.py
weaver/sensors/: __init__.py  battery.py  camera.py  imu.py  thermal.py  ultrasonic.py
weaver/voice/: __init__.py  stt.py  tts.py
weaver/web/: __init__.py  server.py
